<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetailsActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginBottom="11dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/image_details"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="555dp">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="187dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:text="DUMMY header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.052"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="101dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:text="Description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt1" />

            <TextView
                android:id="@+id/descriptionpalce"
                android:layout_width="402dp"
                android:layout_height="377dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/w3"
            android:layout_marginLeft="10dp"
            />
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="4"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/client1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/women1"
            android:layout_marginLeft="10dp"
            />
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="4"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/client2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/man1"
            />
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="4"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/client3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/man2"
            />
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="4"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/client4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <View
            android:id="@+id/eightline"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact Us"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:gravity="center"
            android:fontFamily="@font/baloo_bhai" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6352819486"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:src="@drawable/insta"
            android:id="@+id/insta"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/black"
            android:gravity="center"/>
    </LinearLayout>

</ScrollView>